# mrs_pcl_tools

./: .gitignore  .gitman.yml  CMakeLists.txt  README.md  nodelet_plugins.xml  nodelets.xml  package.xml
cfg/: pcl2map_registration_dynparam.cfg  pcl_filtration_dynparam.cfg
config/: freespace_pc.yaml  pcl2map_registration_default.yaml  pcl_filter.yaml  two_realsenses.yaml
include/: LivoxPCLtoPCL2.h  PCL2MapRegistration.h  PCLFiltration.h  PCLPublishCloudFileToNetwork.h  common_includes_and_typedefs.h  rosPointCloud2ToPCL.hpp
include/impl/: groundplane_detector.hpp  remove_below_ground_filter.hpp  sensors.hpp
include/mrs_pcl_tools/: PCL2MapRegistration.h  PCLFiltration.h  PCLPublishCloudFileToNetwork.h  PCLPublishPCDToNetwork.h  common_includes.h  common_includes_and_typedefs.h  filters.h  freespace_pointcloud_creator.h  groundplane_detector.h  point_types.h  remove_below_ground_filter.h  support.h  typedefs.h
include/mrs_pcl_tools/impl/: remove_below_ground_filter.hpp  sensors.hpp
install/: install.sh  install_pcl.sh
installation/: install.sh  install_pcl.sh
launch/: create_freespace_pointcloud.launch  pcd_to_ros_network.launch  pcl_filter.launch  pcl_livox_to_ros.launch  pointcloud_filtration.launch  registration_pcl_to_map.launch  testing_sor.launch  uav_os1_filtration.launch  uav_os_filtration.launch
lib/: pcl
msg/: LandingSpot.msg
rviz/: estimate_cloud_to_cloud_drift.rviz  estimate_lidar_to_cloud_drift.rviz
src/: LivoxPCLtoPCL2.cpp  PCL2MapRegistration.cpp  PCLFiltration.cpp  PCLPublishCloudFileToNetwork.cpp  PCLPublishPCDToNetwork.cpp  filters.cpp  freespace_pointcloud_creator.cpp  groundplane_detector.cpp  remove_below_ground_filter.cpp  support.cpp
src/executables/: ConcatenateLidarScans.cpp  EstimateCloudToCloudDrift.cpp  EstimateLidarSlamDrift.cpp  PcdEstimateNormals.cpp  RosbagCloudToPCD.cpp
srv/registration/: SrvRegisterPointCloud2.srv  SrvRegisterPointCloudByName.srv  SrvRegisterPointCloudOffline.srv
